--- a/index.src.html
+++ b/index.src.html
@@ -2144,7 +2144,13 @@ dictionary AudioDataInit {
   AudioData(init)
 </dfn>
 1. If |init| is not a [=valid AudioDataInit=], throw a {{TypeError}}.
-2. Let |frame| be a new {{AudioData}} object, initialized as follows:
+2. Let |bytesPerSample| be the number of bytes per sample, as defined by
+    |init|.{AudioDataInit/format}.
+2. If the product of multiplying |init|.{{AudioDataInit/numberOfFrames}} by
+    an by |init|.{{AudioDataInit/numberOfChannels}} and |bytesPerSample| is
+    greater than |init|.{{AudioDataInit/data}}.`byteLength`, throw a
+    {{TypeError}}.
+3. Let |frame| be a new {{AudioData}} object, initialized as follows:
     1. Assign `false` to {{AudioData/[[detached]]}}.
     2. Assign |init|.{{AudioDataInit/format}} to
         {{AudioData/[[format]]}}.
@@ -2160,7 +2166,7 @@ dictionary AudioDataInit {
         |init|.{{AudioDataInit/data}}.
     8. Let |resourceReference| be a reference to |resource|.
     9. Assign |resourceReference| to {{AudioData/[[resource reference]]}}.
-3. Return |frame|.
+4. Return |frame|.
 
 ### Attributes ###{#audiodata-attributes}
 
