Add EnforceRange to AudioDataCopyToOptions

--- a/index.src.html
+++ b/index.src.html
@@ -2318,7 +2318,7 @@ dictionary AudioDataInit {
 
 <xmp class='idl'>
 dictionary AudioDataCopyToOptions {
-  required unsigned long planeIndex;
+  [EnforceRange] required unsigned long planeIndex;
   unsigned long frameOffset = 0;
   unsigned long frameCount;
 };
