s/implementer defined/implementation defined/

--- a/index.src.html
+++ b/index.src.html
@@ -1774,7 +1774,7 @@ To check if a {{VideoEncoderConfig}} is a <dfn>valid VideoEncoderConfig</dfn>,
     {{BitrateMode/variable}} bitrate as defined by [[MEDIASTREAM-RECORDING]].
 
     NOTE: The precise degree of bitrate fluctuation in either mode is
-        implementer defined.
+        implementation defined.
   </dd>
 </dl>
 
