--- a/index.src.html
+++ b/index.src.html
@@ -2170,8 +2170,6 @@ dictionary AudioDataInit {
 };
 </xmp>
 
-TODO: Call out planar format layout
-
 ### Internal Slots ###{#audiodata-internal-slots}
 : <dfn attribute for=AudioData>\[[detached]]</dfn>
 :: Boolean indicating whether {{AudioData/close()}} was invoked on this
@@ -2202,7 +2200,7 @@ TODO: Call out planar format layout
 </dfn>
 1. If |init| is not a [=valid AudioDataInit=], throw a {{TypeError}}.
 2. Let |bytesPerSample| be the number of bytes per sample, as defined by
-    |init|.{AudioDataInit/format}.
+    |init|.{{AudioDataInit/format}}.
 2. If the product of multiplying |init|.{{AudioDataInit/numberOfFrames}} by
     an by |init|.{{AudioDataInit/numberOfChannels}} and |bytesPerSample| is
     greater than |init|.{{AudioDataInit/data}}.`byteLength`, throw a
@@ -2294,7 +2292,7 @@ TODO: Call out planar format layout
         greater than `destination.byteLength`, throw a {{RangeError}}.
     5. Let |format| be the value of {{AudioData/[[format]]}}.
         1. If |format| describes an [=interleaved=] {{AudioSampleFormat}} and
-            |options|.{{AudioDataCopyToOptions/planeIndex}} is greater than 0,
+            |options|.{{AudioDataCopyToOptions/planeIndex}} is greater than `0`,
             throw a {{RangeError}}.
         2. Otherwise, if |format| describes a [=planar=] {{AudioSampleFormat}}
             and if |options|.{{AudioDataCopyToOptions/planeIndex}} is equal or
@@ -2370,6 +2368,24 @@ TODO: Call out planar format layout
     2. If {{AudioDataInit/numberOfFrames}} = 0, return `false`.
     3. If {{AudioDataInit/numberOfChannels}} = 0, return `false`.
     4. Return `true`.
+
+<div class='note'>
+Note: An {{AudioDataInit}}'s {{AudioDataInit/data}} must have the following
+    memory layout:
+    - If {{AudioDataInit/format}} describes an [=interleaved=]
+        {{AudioSampleFormat}}, {{AudioDataInit/data}} should contain
+        one block of samples for each of the {{AudioDataInit/numberOfFrames}}
+        frames, layed out end to end, as a single plane. Within each block of
+        samples, the `nth` sample corresponds to the `nth` of the
+        {{AudioDataInit/numberOfChannels}} channels.
+    - If {{AudioDataInit/format}} describes a [=planar=] {{AudioSampleFormat}},
+        each channel's samples must be consecutively layed out in memory,
+        forming a plane. Every plane must be layed out directly after the
+        previous plane, preserving the ordering of channels. This means that the
+        samples for the `nth` channel must start in {{AudioDataInit/data}} at
+        index `n * numberOfFrames`, and end {{AudioDataInit/numberOfFrames}}
+        frames later.
+</div>
 
 ### AudioDataCopyToOptions ### {#audiodata-copy-to-options}
 
