--- a/index.src.html
+++ b/index.src.html
@@ -2367,7 +2367,18 @@ dictionary AudioDataInit {
 :: 1. If {{AudioDataInit/sampleRate}} = 0, return `false`.
     2. If {{AudioDataInit/numberOfFrames}} = 0, return `false`.
     3. If {{AudioDataInit/numberOfChannels}} = 0, return `false`.
-    4. Return `true`.
+    4. Verify {{AudioDataInit/data}} has enough data by running the following
+        steps:
+        1. Let |totalSamples| be the product of multiplying
+            {{AudioDataInit/numberOfFrames}} by
+            {{AudioDataInit/numberOfChannels}}.
+        2. Let |bytesPerSample| be the number of bytes per sample, as defined by
+            the {{AudioDataInit/format}}.
+        3. Let |totalSize| be the product of multiplying |bytesPerSample| with
+            |totalSamples|.
+        4. Let |dataSize| be the size in bytes of {{AudioDataInit/data}}.
+        5. If |dataSize| is less than |totalSize|, return false.
+    5. Return `true`.
 
 <div class='note'>
 Note: An {{AudioDataInit}}'s {{AudioDataInit/data}} must have the following
