Fix formatting for "valid AudioDataInit" definition

--- a/index.src.html
+++ b/index.src.html
@@ -2364,9 +2364,9 @@ dictionary AudioDataInit {
 
 : To check if a {{AudioDataInit}} is a
     <dfn>valid AudioDataInit</dfn>, run these steps:
-:: 1. If {{AudioDataInit/sampleRate}} = 0, return `false`.
-    2. If {{AudioDataInit/numberOfFrames}} = 0, return `false`.
-    3. If {{AudioDataInit/numberOfChannels}} = 0, return `false`.
+:: 1. If {{AudioDataInit/sampleRate}} = `0`, return `false`.
+    2. If {{AudioDataInit/numberOfFrames}} = `0`, return `false`.
+    3. If {{AudioDataInit/numberOfChannels}} = `0`, return `false`.
     4. Verify {{AudioDataInit/data}} has enough data by running the following
         steps:
         1. Let |totalSamples| be the product of multiplying
