--- a/index.src.html
+++ b/index.src.html
@@ -452,7 +452,7 @@ Algorithms {#audiodecoder-algorithms}
     Run these steps:
     1. For each |output| in |outputs|:
         1. Let |data| be an {{AudioData}}, initialized as follows:
-            1. Assign `false` to {{AudioData/[[detached]]}}.
+            1. Assign `false` to {{platform object/[[Detached]]}}.
             2. Let |resource| be the [=media resource=] described by |output|.
             3. Let |resourceReference| be a reference to |resource|.
             4. Assign |resourceReference| to
@@ -890,7 +890,7 @@ Methods {#audioencoder-methods}
     [=Enqueues a control message=] to encode the given |data|.
 
     When invoked, run these steps:
-    1. If the value of |data|'s {{AudioData/[[detached]]}} internal slot is
+    1. If the value of |data|'s {{platform object/[[Detached]]}} internal slot is
         `true`, throw a {{TypeError}}.
     2. If {{AudioEncoder/[[state]]}} is not `"configured"`, throw an
         {{InvalidStateError}}.
@@ -1206,7 +1206,7 @@ Methods {#videoencoder-methods}
     [=Enqueues a control message=] to encode the given |frame|.
 
     When invoked, run these steps:
-    1. If the value of |frame|'s {{VideoFrame/[[detached]]}} internal slot is
+    1. If the value of |frame|'s {{platform object/[[Detached]]}} internal slot is
         `true`, throw a {{TypeError}}.
     2. If {{VideoEncoder/[[state]]}} is not `"configured"`, throw an
         {{InvalidStateError}}.
@@ -2182,9 +2182,6 @@ dictionary AudioDataInit {
 </xmp>
 
 ### Internal Slots ###{#audiodata-internal-slots}
-: <dfn attribute for=AudioData>\[[detached]]</dfn>
-:: Boolean indicating whether {{AudioData/close()}} was invoked on this
-    {{AudioData}}.
 
 : <dfn attribute for=AudioData>[[resource reference]]</dfn>
 :: A reference to a [=media resource=] that stores the audio sample data for
@@ -2210,7 +2207,7 @@ dictionary AudioDataInit {
   AudioData(init)
 </dfn>
 1. Let |frame| be a new {{AudioData}} object, initialized as follows:
-    1. Assign `false` to {{AudioData/[[detached]]}}.
+    1. Assign `false` to {{platform object/[[Detached]]}}.
     2. Assign |init|.{{AudioDataInit/format}} to
         {{AudioData/[[format]]}}.
     3. Assign |init|.{{AudioDataInit/sampleRate}} to
@@ -2286,7 +2283,7 @@ dictionary AudioDataInit {
     destination buffer.
 
     When invoked, run these steps:
-    1. If the value of |frame|'s {{AudioData/[[detached]]}} internal slot is
+    1. If the value of |frame|'s {{platform object/[[Detached]]}} internal slot is
         `true`, throw an {{InvalidStateError}} {{DOMException}}.
     2. Let |copyElementCount| be the result of running the
         [=Compute Copy Element Count=] algorithm with |options|.
@@ -2306,7 +2303,7 @@ dictionary AudioDataInit {
 :: Creates a new AudioData with a reference to the same [=media resource=].
 
     When invoked, run these steps:
-    1. If the value of |frame|'s {{AudioData/[[detached]]}} internal slot is
+    1. If the value of |frame|'s {{platform object/[[Detached]]}} internal slot is
         `true`, throw an {{InvalidStateError}} {{DOMException}}.
     2. Return the result of running the [=Clone AudioData=] algorithm with
         [=this=].
@@ -2345,7 +2342,7 @@ dictionary AudioDataInit {
             {{AudioData/[[resource reference]]}}.
         2. Let |reference| be a new reference to |resource|.
         3. Assign |reference| to {{AudioData/[[resource reference]]}}.
-        4. Assign the values of |data|'s {{AudioData/[[detached]]}},
+        4. Assign the values of |data|'s {{platform object/[[Detached]]}},
             {{AudioData/[[format]]}}, {{AudioData/[[sample rate]]}},
             {{AudioData/[[number of frames]]}},
             {{AudioData/[[number of channels]]}}, and
@@ -2355,7 +2352,7 @@ dictionary AudioDataInit {
 
 : <dfn>Close AudioData</dfn> (with |data|)
 :: Run these steps:
-        1. Assign `true` to |data|'s {{AudioData/[[detached]]}} internal slot.
+        1. Assign `true` to |data|'s {{platform object/[[Detached]]}} internal slot.
         2. Assign `null` to |data|'s {{AudioData/[[resource reference]]}}.
 
 ### Transfer and Serialization ###{#audiodata-transfer-serialization}
@@ -2366,7 +2363,7 @@ NOTE: Transferring an {{AudioData}} moves its {{AudioData/[[resource
     resulting in two objects that refrence the same [=media resource=].
 
 : The {{AudioData}} [=transfer steps=], with |value| and |dataHolder|, are:
-:: 1. If |value|'s {{AudioData/[[detached]]}} is `true`, throw an
+:: 1. If |value|'s {{platform object/[[Detached]]}} is `true`, throw an
         {{DataCloneError}} {{DOMException}}.
     2. For all {{AudioData}} internal slots in |value|, assign the value of
         each internal slot to a field in |dataHolder| with the same name as the
@@ -2379,7 +2376,7 @@ NOTE: Transferring an {{AudioData}} moves its {{AudioData/[[resource
         as the named field.
 
 : The {{AudioData}} [=serialization steps=], with |value|, |serialized|, and  |forStorage|, are:
-:: 1. If |value|'s {{AudioData/[[detached]]}} is `true`, throw an
+:: 1. If |value|'s {{platform object/[[Detached]]}} is `true`, throw an
         {{DataCloneError}} {{DOMException}}.
     2. If |forStorage| is `true`, throw a {{TypeError}}.
     3. Let |resource| be the [=media resource=] referenced by
@@ -2644,10 +2641,6 @@ dictionary PlaneInit {
 </xmp>
 
 ### Internal Slots ###{#videoframe-internal-slots}
-
-: <dfn attribute for=VideoFrame>\[[detached]]</dfn>
-:: A boolean indicating whether {{destroy()}} was invoked and underlying
-    resources have been released.
 
 : <dfn attribute for=VideoFrame>[[resource reference]]</dfn>
 :: A reference to the [=media resource=] that stores the pixel data for
@@ -2946,7 +2939,7 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
     to be used with {{VideoFrame/copyTo()}} with the given options.
 
     When invoked, run these steps:
-    1. If {{VideoFrame/[[detached]]}} is `true`, return `0`.
+    1. If {{platform object/[[Detached]]}} is `true`, return `0`.
     2. If {{VideoFrame/[[format]]}} is `""`, throw a {{NotSupportedError}}
         {{DOMException}}.
     3. Let |parsedOptions| be the result of running the [=Parse
@@ -2964,7 +2957,7 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
         were returned.
 
     When invoked, run these steps:
-    1. If {{VideoFrame/[[detached]]}} is `true`, return `0`.
+    1. If {{platform object/[[Detached]]}} is `true`, return `0`.
     2. If {{VideoFrame/[[format]]}} is `""`, throw a {{NotSupportedError}}
         {{DOMException}}.
     3. Let |parsedOptions| be the result of running the [=Parse
@@ -3016,7 +3009,7 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
     [=media resource=].
 
     When invoked, run these steps:
-    1. If the value of |frame|’s {{VideoFrame/[[detached]]}} internal slot is
+    1. If the value of |frame|’s {{platform object/[[Detached]]}} internal slot is
         `true`, throw an {{InvalidStateError}} {{DOMException}}.
     2. Return the result of running the [=Clone VideoFrame=] algorithm with
         [=this=].
@@ -3030,7 +3023,7 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
 ### Algorithms ###{#videoframe-algorithms}
   <dfn>Create a VideoFrame</dfn> (with |output|, |timestamp|, |duration|, |displayAspectWidth|, and |displayAspectHeight|)
   1. Let |frame| be a new {{VideoFrame}}, constructed as follows:
-      1. Assign `false` to {{VideoFrame/[[detached]]}}.
+      1. Assign `false` to {{platform object/[[Detached]]}}.
       2. Let |resource| be the [=media resource=] described by |output|.
       3. Let |resourceReference| be a reference to |resource|.
       4. Assign |resourceReference| to {{VideoFrame/[[resource reference]]}}.
@@ -3125,7 +3118,7 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
 
 : <dfn>Close VideoFrame</dfn> (with |frame|)
 :: 1. Assign `null` to |frame|'s {{VideoFrame/[[resource reference]]}}.
-    2. Assign `true` to |frame|'s {{VideoFrame/[[detached]]}}.
+    2. Assign `true` to |frame|'s {{platform object/[[Detached]]}}.
     3. Assign `""` to |frame|'s {{VideoFrame/format}}.
     4. Assign `0` to |frame|'s {{VideoFrame/[[coded width]]}},
         {{VideoFrame/[[coded height]]}}, {{VideoFrame/[[visible left]]}},
@@ -3279,7 +3272,7 @@ NOTE: Transferring a {{VideoFrame}} moves its {{VideoFrame/[[resource
     resulting in two frames that refrence the same [=media resource=].
 
 : The {{VideoFrame}} [=transfer steps=], with |value| and |dataHolder|, are:
-:: 1. If |value|'s {{VideoFrame/[[detached]]}} is `true`, throw an
+:: 1. If |value|'s {{platform object/[[Detached]]}} is `true`, throw an
         {{DataCloneError}} {{DOMException}}.
     2. For all {{VideoFrame}} internal slots in |value|, assign the value of
         each internal slot to a field in |dataHolder| with the same name as the
@@ -3292,7 +3285,7 @@ NOTE: Transferring a {{VideoFrame}} moves its {{VideoFrame/[[resource
         as the named field.
 
 : The {{VideoFrame}} [=serialization steps=], with |value|, |serialized|, and  |forStorage|, are:
-:: 1. If |value|'s {{VideoFrame/[[detached]]}} is `true`, throw an
+:: 1. If |value|'s {{platform object/[[Detached]]}} is `true`, throw an
         {{DataCloneError}} {{DOMException}}.
     2. If |forStorage| is `true`, throw a {{TypeError}}.
     3. Let |resource| be the [=media resource=] referenced by
