--- a/avc_codec_registration.src.html
+++ b/avc_codec_registration.src.html
@@ -66,8 +66,8 @@ spec: WEBCODECS; urlPrefix: https://w3c.github.io/webcodecs/#
 Fully qualified codec strings {#fully-qualified-codec-strings}
 ==============================================================
 
-The codec string must begin with the prefix "avc1.", and contain a suffix of 6
-characters as described in Section 3.4 of [[rfc6381]].
+The codec string begins with the prefix "avc1.", with a suffix of 6 characters
+as described in Section 3.4 of [[rfc6381]].
 
 NOTE: The common "avc3." prefix is intentionally not included. This prefix does
   not signal a material difference to decoder inputs, so it is omitted for
@@ -77,18 +77,16 @@ NOTE: The common "avc3." prefix is intentionally not included. This prefix does
 VideoDecoderConfig description {#videodecoderconfig-description}
 ================================================================
 
-A {{VideoDecoderConfig.description}} may or may not be required by the
-AVC codec depending on the bitstream format of the AVC content to be decoded.
-
-If the {{VideoDecoderConfig.description}} includes an
+If the {{VideoDecoderConfig.description}} is present, it is assumed to be an
 `AVCDecoderConfigurationRecord`, as defined by [[iso14496-15]], section
-5.3.3.1, it will be assumed that the bitstream is in "avc" format.
+5.3.3.1, and the bitstream is assumed to be in {{AvcBitstreamFormat/avc}}
+format.
 
 NOTE: This format is commonly used in .MP4 files, where the player generally
     has random access to the media data.
 
-If the {{VideoDecoderConfig.description}} is not provided, it will be
-assumed that the bitstream is in “annexb” format.
+If the {{VideoDecoderConfig.description}} is not present, the bitstream is
+assumed to be in {{AvcBitstreamFormat/annexb}} format.
 
 NOTE: "annexb" format is described in greater detail by [[ITU-T-REC-H.264]],
     Annex B. This format is commonly used in live-streaming applications, where
@@ -174,18 +172,18 @@ SPS and PPS are described in greater detail in sections G.3.41 and G.3.55 of
 EncodedVideoChunk data {#encodedvideochunk-data}
 ================================================
 
-{{EncodedVideoChunk}} [=EncodedVideoChunk/[[internal data]]=] must be an access
-unit as defined in [[ITU-T-REC-H.264]] section 7.4.1.2.
+{{EncodedVideoChunk}} [=EncodedVideoChunk/[[internal data]]=] is expected to be
+an access unit as defined in [[ITU-T-REC-H.264]] section 7.4.1.2.
 
 NOTE: An access unit contains exactly one primary coded picture.
 
 If the bitstream is in {{AvcBitstreamFormat/avc}} format,
-[=EncodedVideoChunk/[[internal data]]=] must be in canonical format, as defined
-in [[iso14496-15]] section 5.3.2.
+[=EncodedVideoChunk/[[internal data]]=] is assumed to be in canonical format, as
+defined in [[iso14496-15]] section 5.3.2.
 
 If the bitstream is in {{AvcBitstreamFormat/annexb}} format,
-[=EncodedVideoChunk/[[internal data]]=] must be in Annex B format, as defined in
-[[ITU-T-REC-H.264]] Annex B.
+[=EncodedVideoChunk/[[internal data]]=] is assumed to be in in Annex B format,
+as defined in [[ITU-T-REC-H.264]] Annex B.
 
 NOTE: Since [=EncodedVideoChunk/[[internal data]]=] is inherently byte-aligned,
     implementations are not required to recover byte-alignment.
@@ -194,19 +192,20 @@ EncodedVideoChunk type {#encodedvideochunk-type}
 ================================================
 
 If an {{EncodedVideoChunk}}'s [=EncodedVideoChunk/[[type]]=] is
-{{EncodedVideoChunkType/key}}, it must contain a primary coded picture that is
-an instantaneous decoding refresh (IDR) picture, and all required parameter
-sets.
-
-If the bitstream is in {{AvcBitstreamFormat/avc}} format, no parameter sets are
-required.
+{{EncodedVideoChunkType/key}}, and the bitstream is in
+{{AvcBitstreamFormat/avc}} format, then the {{EncodedVideoChunk}} is expected to
+contain a primary coded picture that is an instantaneous decoding refresh (IDR)
+picture.
 
 NOTE: If the bitstream is in {{AvcBitstreamFormat/avc}} format, parameter sets
-    necessary for decoding must be included in
-    {{VideoDecoderConfig.description}}.
+    necessary for decoding are included in {{VideoDecoderConfig.description}}.
 
-If the bitstream is in {{AvcBitstreamFormat/annexb}} format, all parameter sets
-necessary to decode all video data NAL units in the keyframe chunk are required.
+If an {{EncodedVideoChunk}}'s [=EncodedVideoChunk/[[type]]=] is
+{{EncodedVideoChunkType/key}}, and the bitstream is in
+{{AvcBitstreamFormat/annexb}} format, then the {{EncodedVideoChunk}} is expected
+to contain both a primary coded picture that is an instantaneous decoding
+refresh (IDR) picture, and all parameter sets necessary to decode all video data
+NAL units in the {{EncodedVideoChunk}}.
 
 Privacy and Security Considerations {#privacy-and-security-considerations}
 ==========================================================================
