--- a/index.src.html
+++ b/index.src.html
@@ -3331,6 +3331,8 @@ enum PixelFormat {
   "I444",
   // 4:2:0 Y, UV
   "NV12",
+  // 32bpp RGBA
+  "RGBA",
 };
 </xmp>
 
@@ -3483,6 +3485,19 @@ enum PixelFormat {
 
     All samples being linear in memory.
   </div>
+  </dd>
+  <dt><dfn enum-value for=PixelFormat>RGBA</dfn></dt>
+  <dd>
+
+    This format is composed of a single plane, that encodes four components:
+    Red, Green, Blue, and an alpha value, present in this order.
+
+    Each sample in this format is 8 bits, and each pixel is therefore 32 bits.
+
+    There are {{VideoFrame/codedWidth}} * {{VideoFrame/codedHeight}} * 4 samples
+    (and therefore bytes) in the single plane, arranged starting at the top
+    left in the image, in {{VideoFrame/codedHeight}} lines of
+    {{VideoFrame/codedWidth}} samples.
   </dd>
 </dl>
 
