--- a/index.src.html
+++ b/index.src.html
@@ -3335,6 +3335,8 @@ enum PixelFormat {
   "RGBA",
   // 32bpp RGBX (opaque)
   "RGBX",
+  // 32bpp BGRA
+  "BGRA",
 };
 </xmp>
 
@@ -3509,6 +3511,19 @@ enum PixelFormat {
 
     Each sample in this format is 8 bits. The fourth element in each pixel is to
     be ignored, the image is always fully opaque.
+
+    There are {{VideoFrame/codedWidth}} * {{VideoFrame/codedHeight}} * 4 samples
+    (and therefore bytes) in the single plane, arranged starting at the top left
+    in the image, in {{VideoFrame/codedHeight}} lines of
+    {{VideoFrame/codedWidth}} samples.
+  </dd>
+  <dt><dfn enum-value for=PixelFormat>BGRA</dfn></dt>
+  <dd>
+
+    This format is composed of a single plane, that encodes four components:
+    Blue, Green, Red, and an alpha value, present in this order.
+
+    Each sample in this format is 8 bits.
 
     There are {{VideoFrame/codedWidth}} * {{VideoFrame/codedHeight}} * 4 samples
     (and therefore bytes) in the single plane, arranged starting at the top left
