Add audio data memory layout diagram

--- a/index.src.html
+++ b/index.src.html
@@ -2504,6 +2504,14 @@ in different buffers, themselves arranged in an order described in the section
 
 Note: The [[WEBAUDIO|Web Audio API]] currently uses {{FLTP}} exclusively.
 
+<div class='note'>
+Note: The following diagram exmplifies the memory layout of [=planar=] versus
+    [=interleaved=] {{AudioSampleFormat}}s
+
+<img alt="Graphical representation the memory layout of interleaved and planar
+    formats" src="images/planar-interleaved-layout.png" width="735" height="455">
+</div>
+
 ### Magnitude of the audio samples ### {#audio-samples-magnitude}
 
 The <dfn>minimum value</dfn> and <dfn>maximum value</dfn> of an audio sample,
