Improve LatencyMode dfn

--- a/index.src.html
+++ b/index.src.html
@@ -1920,15 +1920,15 @@ enum LatencyMode {
 :: Indicates that the user agent should optimize for encoding quality. In
     this mode:
     * User agents may increase encoding latency to improve quality.
-    * User agents must not drop frames to achieve the target bitrate and/or
-        framerate.
+    * User agents must not drop frames to achieve the target
+        {{VideoEncoderConfig/bitrate}}.
 
 : <dfn enum-value for=LatencyMode>realtime</dfn>
 :: Indicates that the user agent should optimize for low latency. In this
     mode:
     * User agents may sacrifice quality to improve latency.
-    * User agents may drop frames to achieve the target bitrate and/or
-        framerate.
+    * User agents may drop frames to achieve the target
+        {{VideoEncoderConfig/bitrate}}.
 
 Configuration Equivalence{#config-equivalence}
 ----------------------------------------------
