Clear AudioData/[[format]] on close()

--- a/index.src.html
+++ b/index.src.html
@@ -2330,6 +2330,7 @@ dictionary AudioDataInit {
     3. Assign `0` to {{AudioData/[[sample rate]]}}.
     4. Assign `0` to {{AudioData/[[number of frames]]}}.
     5. Assign `0` to {{AudioData/[[number of channels]]}}.
+    6. Assign `""` to {{AudioData/[[format]]}}.
 
 ### Algorithms ### {#audiodata-algorithms}
 
